@@ -1,4 +1,5 @@
 [master]
+    - Fix bug #325: Deactivating AutoCompletion crashes EntryEditor
     - Feature: Search DOAJ, Directory of Open Access Journals
     - The key bindings for searching specific databases are removed
     - Removes option to toggle native file dialog on mac by making JabRef always use native file dialogs on mac
